# HarborPilot-MultiAgent

./: .env.example  .gitignore  .impeccable.md  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-llm.txt  requirements.txt
.github/workflows/: ci.yml
data/: acquisition_sources.json  community_sources.json  cv_profile_schema.json  form_definition.json  programs_2027_fall.json  questionnaire_schema.json  source_registry.json  taxonomy.json  writing_questionnaire_schema.json
data/external_candidates/: qs_master_applications_candidates.json
data/snapshots/20260616/: college_confidential_forums_077a5a4d6dd07e9d.html  (+4 more)
docs/: HANDOFF_NEXT_WINDOW.md  agent-workflow.md  architecture.md  data-acquisition-agent.md  product-trust-todo.md  resume-bullets.md  third-party-ui-review.md
docs/adr/: 0001-modular-monolith.md
examples/: rule_set_hk_sg.yaml  sample_profile.json
scripts/: audit_text_quality.py  generate_program_catalog.py  import_qs_master_applications.py  run_demo_workflow.py  run_real_agent_smoke.py  run_scenario_audit.py  start-api.cmd  start-web.cmd
src/harbor_agent/: __init__.py  app.py  config.py  models.py
tests/: test_agent_registry.py  test_api.py  test_review_gate.py  test_rules.py  test_scenario_audit.py  test_trustworthy_workflow.py  test_workflow.py
web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: ClientHarborPilotApp.tsx  HarborPilotApp.tsx  globals.css  layout.tsx  page.tsx
web/lib/: animalIslandStub.tsx  api.ts  demoPayload.ts  types.ts
(+32 files in other folders)
