[project]
name = "harbor-pilot-ai"
version = "0.1.0"
description = "A multi-agent admissions planning platform for Hong Kong and Singapore graduate applications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

